--- a/style.css
+++ b/style.css
@@ -1,59 +1,59 @@
-*,html{
+*, html {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-.btn-container{
+.btn-container {
     display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     height: 200px;
 }
 
-.cards-container{
-    display: flex; 
-    /* display: inline-block; */
-    width: 100vw;
-    overflow-x: scroll;  
-    justify-content: flex-start;
+.cards-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
-.card{
-    perspective: 150rem;
-    -moz-perspective: 150rem;    
-    width: 200px;
-    min-width: 200px ;
-    height: 300px;
+.card {
     margin: 15px;
-    position: relative;
-    transition:all 1s;
-    transform-style: preserve-3d;
+    perspective: 750px;
+    -moz-perspective: 750px;
 }
 
-.card:hover{
+.card__wrapper {
+    width: 200px;
+    min-width: 200px;
+    height: 300px;
+    position: relative;
+    transform-style: preserve-3d;
+    transition: all 1s;
+}
+
+.card__wrapper.active {
     transform: rotateY(180deg);
 }
+
 .front, .back {
     border-radius: 10px;
     position: absolute;
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
-  }
-
-.front{
     color: black;
 }
 
 .back {
     padding: 20px;
-    box-sizing: border-box;
     color: black;
     transform: rotateY(180deg);
-  }
+}
 
-#add-btn{
+.btn-container button {
+    margin-right: 15px;
     font-size: 25px;
     background-color: lightblue;
     padding: 10px 20px;
@@ -63,7 +63,10 @@
     transition: all .5s;
 }
 
-#add-btn:hover{
+.btn-container button:hover {
     background-color: red;
-    
+}
+
+.btn-container button:last-child {
+    margin-right: 0;
 }
